# osrs-tool-hub

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SLAYER_PATCHES.md  STATUS.md  TEST_FIXES.md  TODO.md  coverage.json  debug_db.py  pyproject.toml  refactor.md  roadmap.md  run_tests.sh
.cursor/plans/: complete_wiki_guide_data_f745d0c1.plan.md  runelite_plugin_analysis_e163b4d0.plan.md  wiki_guide_full_loadouts_2df51c90.plan.md
.github/workflows/: ci.yml
backend/: config.py  database.py  main.py  models.py  monitoring.py  osrs_hub.db-journal
backend/api/v1/: flips.py  gear.py  health.py  schemas.py  slayer.py  trades.py  validators.py  watchlist.py
backend/app/: __init__.py  factory.py  lifespan.py  logging_config.py  middleware.py  routers.py  scheduler.py
backend/data/bosses/: gwd.json  toa.json  (+2 more)
backend/db/: __init__.py  engine.py  migrations.py  session.py
backend/models/: __init__.py  enums.py  flipping.py  gear.py  items.py  slayer.py  trade.py  watchlist.py
backend/scripts/: __init__.py  check_gear_items.py  check_slayer_data.py  fetch_wiki_gear.py  seed_prices.py  seed_slayer.py  sync_all_items.py
backend/seeds/: README.md
backend/services/: flipping.py  gear.py  gear_presets.py  item_stats.py  slayer.py  slayer_data.py  trade.py  watchlist.py  wiki_client.py  wiki_data.py  wiki_guide_verification.py
backend/tests/: README.md  conftest.py  pytest.ini  test_api.py  test_e2e_flipping.py  test_e2e_gear.py  test_e2e_slayer.py  test_flipping.py  test_integration_db_sync.py  test_integration_full_flow.py  test_integration_gear_slayer.py  test_integration_trade_watchlist.py  test_integration_workflows.py  test_rate_limiting.py  test_slayer.py  test_validation.py
docs/: API_EXAMPLES.md  ARCHITECTURE.md  DATABASE_MIGRATION.md  DEPLOYMENT.md  GEAR_ITEMS_STATUS.md  MONITORING_SETUP.md  RELEASE_CHECKLIST.md  USER_GUIDE.md  magic-gear-progression.md  melee-gear-progression.md  ranged-gear-progression.md
docs/archive/: CHANGELOG_2026-01-27.md  FLIPPING_ISSUES.md  PATCHES_APPLIED.md  README.md  SLAYER_ANALYSIS.md  SLAYER_VERIFICATION.md  STATUS.md
frontend/: TESTING.md  UI_IMPROVEMENTS_SUMMARY.md  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  main.tsx
patches/: 001-fix-gear-ui-database-sync.patch
scripts/: migrate_wiki_data_to_json.py
(+288 files in other folders)
